[gd_scene load_steps=46 format=3 uid="uid://bqem2q2uoplf7"]

[ext_resource type="Script" uid="uid://ddpvbvb6pvca7" path="res://Objects/Actors/Playable characters/player_character.gd" id="1_hu6rx"]
[ext_resource type="Script" uid="uid://boe33ifh4mg42" path="res://Objects/Actors/player_skin.gd" id="2_dnmom"]
[ext_resource type="PackedScene" uid="uid://bswff1dff0reu" path="res://Objects/Actors/Playable characters/Knight/Knight.glb" id="3_2b2eo"]
[ext_resource type="Script" uid="uid://n3570sslnkri" path="res://Common/Components/movement_component.gd" id="3_vya7y"]
[ext_resource type="Script" uid="uid://b4gskhfdf4c5n" path="res://Common/Components/health_component.gd" id="5_c8r27"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_kr56n"]
animation = &"Blocking"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_2b2eo"]
filter_enabled = true
filters = ["%3DModel/../SecondAttackTimer", "..", "Rig/Skeleton3D:chest", "Rig/Skeleton3D:hand.l", "Rig/Skeleton3D:hand.r", "Rig/Skeleton3D:handslot.l", "Rig/Skeleton3D:handslot.r", "Rig/Skeleton3D:head", "Rig/Skeleton3D:hips", "Rig/Skeleton3D:lowerarm.l", "Rig/Skeleton3D:lowerarm.r", "Rig/Skeleton3D:root", "Rig/Skeleton3D:spine", "Rig/Skeleton3D:upperarm.l", "Rig/Skeleton3D:upperarm.r"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x2uje"]
animation = &"1H_Melee_Attack_Chop"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wyaus"]
animation = &"1H_Melee_Attack_Slice_Horizontal"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_fhoau"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_by330"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yg0n2"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_584pr"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_sug6k"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_v37gc"]
states/Chop/node = SubResource("AnimationNodeAnimation_x2uje")
states/Chop/position = Vector2(410, 49)
states/End/position = Vector2(560, 100)
states/Slice/node = SubResource("AnimationNodeAnimation_wyaus")
states/Slice/position = Vector2(410, 152)
states/Start/position = Vector2(239, 100)
transitions = ["Start", "Chop", SubResource("AnimationNodeStateMachineTransition_fhoau"), "Chop", "Slice", SubResource("AnimationNodeStateMachineTransition_by330"), "Slice", "Chop", SubResource("AnimationNodeStateMachineTransition_yg0n2"), "Chop", "End", SubResource("AnimationNodeStateMachineTransition_584pr"), "Slice", "End", SubResource("AnimationNodeStateMachineTransition_sug6k")]
graph_offset = Vector2(-390, -146)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tfjsy"]
animation = &"Use_Item"

[sub_resource type="AnimationNodeOneShot" id="AnimationNodeOneShot_jt7ts"]
filter_enabled = true
filters = ["..", "Rig/Skeleton3D:chest", "Rig/Skeleton3D:hand.l", "Rig/Skeleton3D:hand.r", "Rig/Skeleton3D:handslot.l", "Rig/Skeleton3D:handslot.r", "Rig/Skeleton3D:head", "Rig/Skeleton3D:hips", "Rig/Skeleton3D:lowerarm.l", "Rig/Skeleton3D:lowerarm.r", "Rig/Skeleton3D:root", "Rig/Skeleton3D:spine", "Rig/Skeleton3D:upperarm.l", "Rig/Skeleton3D:upperarm.r"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2b2eo"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_idbh4"]
animation = &"Jump_Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vgvty"]
animation = &"Jump_Land"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_2a4vq"]
animation = &"Jump_Start"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_584pr"]
animation = &"Running_A"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_sug6k"]
animation = &"Running_B"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_x2uje"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wyaus"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kr56n"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_tfjsy"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_jt7ts"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_isxd4"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_su02r"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6otoh"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_7bd0i"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1ea8p"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_yl3ql"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3nxc8"]
xfade_time = 0.2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ynv41"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b2t7s"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ui6t6"]
xfade_time = 0.2
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2b2eo"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_2b2eo"]
states/Idle/node = SubResource("AnimationNodeAnimation_2b2eo")
states/Idle/position = Vector2(365, 40)
states/Jump_Idle/node = SubResource("AnimationNodeAnimation_idbh4")
states/Jump_Idle/position = Vector2(525, 265)
states/Jump_Land/node = SubResource("AnimationNodeAnimation_vgvty")
states/Jump_Land/position = Vector2(591, 30)
states/Jump_Start/node = SubResource("AnimationNodeAnimation_2a4vq")
states/Jump_Start/position = Vector2(365, 265)
states/Running_A/node = SubResource("AnimationNodeAnimation_584pr")
states/Running_A/position = Vector2(287, 144)
states/Running_B/node = SubResource("AnimationNodeAnimation_sug6k")
states/Running_B/position = Vector2(455, 144)
states/Start/position = Vector2(365, -51)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_x2uje"), "Idle", "Running_B", SubResource("AnimationNodeStateMachineTransition_wyaus"), "Running_B", "Running_A", SubResource("AnimationNodeStateMachineTransition_kr56n"), "Running_A", "Idle", SubResource("AnimationNodeStateMachineTransition_tfjsy"), "Running_B", "Idle", SubResource("AnimationNodeStateMachineTransition_jt7ts"), "Running_A", "Running_B", SubResource("AnimationNodeStateMachineTransition_isxd4"), "Idle", "Running_A", SubResource("AnimationNodeStateMachineTransition_su02r"), "Idle", "Jump_Start", SubResource("AnimationNodeStateMachineTransition_6otoh"), "Running_B", "Jump_Start", SubResource("AnimationNodeStateMachineTransition_7bd0i"), "Running_A", "Jump_Start", SubResource("AnimationNodeStateMachineTransition_1ea8p"), "Jump_Start", "Jump_Idle", SubResource("AnimationNodeStateMachineTransition_yl3ql"), "Jump_Idle", "Jump_Land", SubResource("AnimationNodeStateMachineTransition_3nxc8"), "Jump_Land", "Idle", SubResource("AnimationNodeStateMachineTransition_ynv41"), "Jump_Land", "Running_B", SubResource("AnimationNodeStateMachineTransition_b2t7s"), "Jump_Land", "Running_A", SubResource("AnimationNodeStateMachineTransition_ui6t6"), "Idle", "End", SubResource("AnimationNodeStateMachineTransition_2b2eo")]
graph_offset = Vector2(-330, -165)

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_isxd4"]
filter_enabled = true
filters = ["..", "Rig/Skeleton3D:chest", "Rig/Skeleton3D:hand.l", "Rig/Skeleton3D:hand.r", "Rig/Skeleton3D:handslot.l", "Rig/Skeleton3D:handslot.r", "Rig/Skeleton3D:head", "Rig/Skeleton3D:hips", "Rig/Skeleton3D:lowerarm.l", "Rig/Skeleton3D:lowerarm.r", "Rig/Skeleton3D:root", "Rig/Skeleton3D:spine", "Rig/Skeleton3D:upperarm.l", "Rig/Skeleton3D:upperarm.r"]

[sub_resource type="AnimationNodeTimeScale" id="AnimationNodeTimeScale_2b2eo"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_2b2eo"]
nodes/Animation/node = SubResource("AnimationNodeAnimation_kr56n")
nodes/Animation/position = Vector2(-780, 120)
nodes/AttackOneShot/node = SubResource("AnimationNodeOneShot_2b2eo")
nodes/AttackOneShot/position = Vector2(-200, -20)
nodes/AttackStateMachine/node = SubResource("AnimationNodeStateMachine_v37gc")
nodes/AttackStateMachine/position = Vector2(-580, 320)
nodes/ExtraAnimation/node = SubResource("AnimationNodeAnimation_tfjsy")
nodes/ExtraAnimation/position = Vector2(-200, 360)
nodes/ExtraOneShot/node = SubResource("AnimationNodeOneShot_jt7ts")
nodes/ExtraOneShot/position = Vector2(60, 120)
nodes/MovementStateMachine/node = SubResource("AnimationNodeStateMachine_2b2eo")
nodes/MovementStateMachine/position = Vector2(-940, -120)
nodes/ShieldBlend/node = SubResource("AnimationNodeBlend2_isxd4")
nodes/ShieldBlend/position = Vector2(-440, -100)
nodes/TimeScale/node = SubResource("AnimationNodeTimeScale_2b2eo")
nodes/TimeScale/position = Vector2(-660, -100)
node_connections = [&"AttackOneShot", 0, &"ShieldBlend", &"AttackOneShot", 1, &"AttackStateMachine", &"ExtraOneShot", 0, &"AttackOneShot", &"ExtraOneShot", 1, &"ExtraAnimation", &"ShieldBlend", 0, &"TimeScale", &"ShieldBlend", 1, &"Animation", &"TimeScale", 0, &"MovementStateMachine", &"output", 0, &"ExtraOneShot"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hu6rx"]
radius = 0.4
height = 2.356

[sub_resource type="SphereShape3D" id="SphereShape3D_vya7y"]

[node name="PlayerCharacter" type="CharacterBody3D" node_paths=PackedStringArray("movement_component", "health_component")]
script = ExtResource("1_hu6rx")
movement_component = NodePath("Components/MovementComponent")
health_component = NodePath("Components/HealthComponent")

[node name="3DModel" type="Node3D" parent="." node_paths=PackedStringArray("second_attack_timer")]
unique_name_in_owner = true
script = ExtResource("2_dnmom")
second_attack_timer = NodePath("../SecondAttackTimer")

[node name="Knight" parent="3DModel" instance=ExtResource("3_2b2eo")]

[node name="Skeleton3D" parent="3DModel/Knight/Rig" index="0"]
bones/1/position = Vector3(0, 0.417159, 0)
bones/1/rotation = Quaternion(0.0958458, -1.1866e-07, 1.14257e-08, 0.995396)
bones/2/rotation = Quaternion(0, 0.128128, -0.0249056, 0.991445)
bones/3/rotation = Quaternion(-3.72529e-09, 7.45058e-09, -9.31322e-10, 1)
bones/4/position = Vector3(0.212007, 0.124592, -0.0490813)
bones/4/rotation = Quaternion(-0.821422, -0.181808, -0.176867, 0.510812)
bones/5/rotation = Quaternion(1.20829e-08, -5.66777e-08, -0.433814, 0.901002)
bones/7/rotation = Quaternion(-0.476447, 0.275308, 0.166072, 0.818306)
bones/8/position = Vector3(8.34822e-10, 0.0961251, -0.0575)
bones/8/rotation = Quaternion(-0.029139, -0.0798474, -0.833941, 0.545268)
bones/14/position = Vector3(-0.212007, 0.143673, 0.0490814)
bones/14/rotation = Quaternion(-0.795086, 0.168455, 0.391158, 0.431807)
bones/15/rotation = Quaternion(3.41133e-08, 4.45133e-08, 0.591449, 0.806342)
bones/17/rotation = Quaternion(-0.124584, 0.455198, 0.173448, 0.864401)
bones/18/position = Vector3(-8.34815e-10, 0.0961251, -0.0575)
bones/18/rotation = Quaternion(-0.0545054, -0.0545054, 0.539162, 0.838667)
bones/21/rotation = Quaternion(0, -0.128128, 0.0249056, 0.991445)
bones/24/position = Vector3(0.170945, 0.113587, 0.1)
bones/24/rotation = Quaternion(0.874061, -7.84782e-08, 3.79741e-08, 0.485815)
bones/25/rotation = Quaternion(0.219086, 6.73661e-08, -1.52148e-07, 0.975706)
bones/26/rotation = Quaternion(-0.60179, -3.58798e-08, -2.85281e-08, 0.798655)
bones/27/rotation = Quaternion(-3.04791e-08, 0.920355, -0.391084, 6.94848e-08)
bones/28/position = Vector3(-0.170945, 0.113587, -0.1)
bones/28/rotation = Quaternion(0.999892, 3.07847e-07, 3.12554e-08, 0.0146708)
bones/29/rotation = Quaternion(0.675133, -5.09331e-08, 4.68858e-07, 0.737696)
bones/30/rotation = Quaternion(-0.217646, 1.74856e-07, -2.97633e-07, 0.976028)
bones/31/rotation = Quaternion(3.04791e-08, 0.920355, -0.391084, -6.94848e-08)
bones/32/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/33/position = Vector3(0.170945, 0.350856, 0.598769)
bones/33/rotation = Quaternion(-0.94525, -2.97621e-08, -9.707e-08, 0.326347)
bones/34/rotation = Quaternion(7.54953e-15, -1.38321e-22, 1, 4.44089e-16)
bones/35/position = Vector3(3.75295e-09, 0.213436, -4.29078e-08)
bones/35/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.95261e-08)
bones/37/rotation = Quaternion(1, -1.33227e-15, 1.94707e-07, 0)
bones/39/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/40/position = Vector3(-0.170945, 0.138444, -0.475788)
bones/40/rotation = Quaternion(0.200462, -1.03035e-07, 2.53118e-08, 0.979702)
bones/41/position = Vector3(4.55695e-09, 0.362833, 2.42861e-15)
bones/41/rotation = Quaternion(7.10544e-15, -1.38321e-22, 1, -2.22045e-16)
bones/42/position = Vector3(-1.11482e-08, 0.213436, 2.14539e-08)
bones/42/rotation = Quaternion(-1.04035e-07, 0.391084, 0.920355, -2.95261e-08)
bones/43/position = Vector3(-6.31127e-09, 0.16565, 5.98178e-10)
bones/44/rotation = Quaternion(1, 4.44087e-16, 1.94707e-07, 1.54616e-29)
bones/46/position = Vector3(0.453508, 0.906761, -0.688859)
bones/46/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/47/position = Vector3(0.513182, 1.00676, -0.3)
bones/47/rotation = Quaternion(0.778964, -0.0841609, 0.564492, -0.259773)
bones/48/position = Vector3(-0.453507, 0.906761, -0.68886)
bones/48/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/49/position = Vector3(-0.513182, 0.906761, 0.3)
bones/49/rotation = Quaternion(-0.625361, 0.524019, 0.474767, -0.330037)

[node name="1H_Sword_Offhand" parent="3DModel/Knight/Rig/Skeleton3D" index="0"]
transform = Transform3D(-0.162162, 0.348533, 0.923161, 0.983191, -0.0224722, 0.181191, 0.0838964, 0.937027, -0.33903, 0.54712, 0.895568, -0.351181)
visible = false

[node name="Badge_Shield" parent="3DModel/Knight/Rig/Skeleton3D" index="1"]
transform = Transform3D(-0.162162, 0.348533, 0.923161, 0.98319, -0.0224747, 0.181192, 0.083899, 0.937027, -0.33903, 0.691028, 0.923814, -0.40403)

[node name="Rectangle_Shield" parent="3DModel/Knight/Rig/Skeleton3D" index="2"]
transform = Transform3D(-0.162162, 0.348533, 0.923161, 0.98319, -0.0224747, 0.181192, 0.083899, 0.937027, -0.33903, 0.691028, 0.923814, -0.40403)
visible = false

[node name="Round_Shield" parent="3DModel/Knight/Rig/Skeleton3D" index="3"]
transform = Transform3D(-0.162162, 0.348533, 0.923161, 0.98319, -0.0224747, 0.181192, 0.083899, 0.937027, -0.33903, 0.691028, 0.923814, -0.40403)
visible = false

[node name="Spike_Shield" parent="3DModel/Knight/Rig/Skeleton3D" index="4"]
transform = Transform3D(-0.162162, 0.348533, 0.923161, 0.98319, -0.0224747, 0.181192, 0.083899, 0.937027, -0.33903, 0.691028, 0.923814, -0.40403)
visible = false

[node name="1H_Sword" parent="3DModel/Knight/Rig/Skeleton3D" index="5"]
transform = Transform3D(0.342019, 1.3987e-08, 0.939692, 0.609079, 0.761497, -0.221686, -0.715572, 0.648168, 0.260447, -0.540894, 0.878216, 0.476697)

[node name="2H_Sword" parent="3DModel/Knight/Rig/Skeleton3D" index="6"]
transform = Transform3D(0.342019, 8.94784e-09, 0.939692, 0.609079, 0.761497, -0.221686, -0.715572, 0.648168, 0.260447, -0.540894, 0.878216, 0.476697)
visible = false

[node name="Knight_Helmet" parent="3DModel/Knight/Rig/Skeleton3D" index="7"]
transform = Transform3D(1, 9.31323e-10, -1.42109e-14, -7.45058e-09, 0.981627, -0.190809, -1.49011e-08, 0.190809, 0.981627, 0.0317938, 1.2125, 0.150413)

[node name="Knight_Cape" parent="3DModel/Knight/Rig/Skeleton3D" index="8"]
transform = Transform3D(0.965926, 0.049385, 0.254064, 3.82678e-08, 0.981627, -0.190809, -0.258819, 0.184307, 0.948179, 0.0305322, 1.2125, 0.150579)

[node name="SecondAttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationTree" type="AnimationTree" parent="."]
unique_name_in_owner = true
root_node = NodePath("%3DModel/Knight")
tree_root = SubResource("AnimationNodeBlendTree_2b2eo")
anim_player = NodePath("../3DModel/Knight/AnimationPlayer")
parameters/AttackOneShot/active = false
parameters/AttackOneShot/internal_active = false
parameters/AttackOneShot/request = 0
parameters/ExtraOneShot/active = false
parameters/ExtraOneShot/internal_active = false
parameters/ExtraOneShot/request = 0
parameters/ShieldBlend/blend_amount = 0.0
parameters/TimeScale/scale = 1.8

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 0)
shape = SubResource("CapsuleShape3D_hu6rx")

[node name="Components" type="Node3D" parent="."]

[node name="MovementComponent" type="Node" parent="Components"]
script = ExtResource("3_vya7y")
acceleration = 15.0

[node name="HealthComponent" type="Node" parent="Components"]
script = ExtResource("5_c8r27")
max_health = 100
metadata/_custom_type_script = "uid://b4gskhfdf4c5n"

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="CameraPivot"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("SphereShape3D_vya7y")
spring_length = 8.0

[node name="Camera3D" type="Camera3D" parent="CameraPivot/SpringArm3D"]
unique_name_in_owner = true

[editable path="3DModel/Knight"]
